@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.77.2.32 2003/03/17 20:13:51 mike Exp $"
+ * "$Id: conf.c,v 1.77.2.33 2003/03/19 06:07:40 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -143,6 +143,7 @@ static var_t	variables[] =
   { "MaxJobsPerPrinter",	&MaxJobsPerPrinter,	VAR_INTEGER },
   { "MaxJobsPerUser",		&MaxJobsPerUser,	VAR_INTEGER },
   { "MaxLogSize",		&MaxLogSize,		VAR_INTEGER },
+  { "MaxPrinterHistory",	&MaxPrinterHistory,	VAR_INTEGER },
   { "MaxRequestSize",		&MaxRequestSize,	VAR_INTEGER },
   { "PageLog",			&PageLog,		VAR_STRING },
   { "PreserveJobFiles",		&JobFiles,		VAR_BOOLEAN },
@@ -391,6 +392,7 @@ ReadConfiguration(void)
   MaxClients          = 100;
   MaxClientsPerHost   = 0;
   MaxLogSize          = 1024 * 1024;
+  MaxPrinterHistory   = 10;
   MaxRequestSize      = 0;
   RootCertDuration    = 300;
   RunAsUser           = FALSE;
@@ -2196,5 +2198,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.77.2.32 2003/03/17 20:13:51 mike Exp $".
+ * End of "$Id: conf.c,v 1.77.2.33 2003/03/19 06:07:40 mike Exp $".
  */
