@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.124.2.55 2003/03/17 14:17:31 mike Exp $"
+ * "$Id: job.c,v 1.124.2.56 2003/03/19 06:07:48 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -2168,6 +2168,11 @@ UpdateJob(job_t *job)		/* I - Job to check */
       loglevel = L_PAGE;
       message  = job->buffer + 5;
     }
+    else if (strncmp(job->buffer, "STATE:", 6) == 0)
+    {
+      loglevel = L_STATE;
+      message  = job->buffer + 6;
+    }
     else
     {
       loglevel = L_DEBUG;
@@ -2212,6 +2217,8 @@ UpdateJob(job_t *job)		/* I - Job to check */
 
       LogPage(job, message);
     }
+    else if (loglevel == L_STATE)
+      SetPrinterReasons(job->printer, message);
     else
     {
      /*
@@ -2623,5 +2630,5 @@ start_process(const char *command,	/* I - Full path to command */
 
 
 /*
- * End of "$Id: job.c,v 1.124.2.55 2003/03/17 14:17:31 mike Exp $".
+ * End of "$Id: job.c,v 1.124.2.56 2003/03/19 06:07:48 mike Exp $".
  */
